Fix genecluster page align

--- a/anvio/data/interactive/css/geneclusters.css
+++ b/anvio/data/interactive/css/geneclusters.css
@@ -319,4 +319,6 @@ td {
   text-align: center;
   padding-bottom: 15px;
 }
-
+.main-container{
+  display: contents;
+}
